fix overflow y in homepage

--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -197,6 +197,7 @@
     scrollbar-width: none;
     height: 270px;
     padding-top: 20px;
+    overflow-y: hidden;
   }
 
   .link_container {
